UPDATE: Fix deprecation warning of Class.newInstance() in XMLDataFormat.loadClass().